--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=restexemplo
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+# Banco config
+spring.datasource.url=jdbc:mysql://localhost:3306/api_rest2
+spring.datasource.username=root
 spring.datasource.password=
 
-# JPA Hibernate
+# Config Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
